<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen  xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Sort Order -->
    <ListPreference
        android:title="@string/pref_sort_title"
        android:key="@string/pref_sort_key"
        android:dialogTitle="@string/pref_sort_title"
        android:entries="@array/pref_sort_entry_titles"
        android:entryValues="@array/pref_sort_values"
        android:defaultValue="@string/pref_sort_default"
        />
    <!--Notification Toggle-->
    <SwitchPreferenceCompat
        android:title="@string/pref_notification_title"
        android:key="@string/pref_notification_key"
        android:switchTextOn="@string/notification_on"
        android:switchTextOff="@string/notification_off"
        android:defaultValue="true"
        />
</PreferenceScreen>
