<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".NoteListActivity"
    >

    <android.support.design.widget.TextInputLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/layout_margin"
        android:orientation="vertical"
        tools:context=".NoteListActivity"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_input_hint"
            android:inputType="textAutoCorrect|textCapSentences"
            android:imeActionLabel="@string/action_add"
            android:imeOptions="actionDone"
            android:nextFocusLeft="@id/edit_text"
            android:nextFocusUp="@id/edit_text"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_pick_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_pick_color_title"
        android:background="@color/yellow"
        android:layout_gravity="center"
        />
</LinearLayout>